@@ -1,14 +1,12 @@
 package pass;
 
-import java.util.Iterator;
-import java.lang.Iterable;
 import java.nio.file.Path;
 import java.net.URI;
-
+import java.nio.file.Paths;
 
 public class ForEachStatementIterable {
     public void forEachStatementAnalyze() {
-        Path p = Path.of(new URI("e"));
+        Path p = Paths.get("Something");
         int i = 0;
         for(Path r : p) {
             i += 1;
